<resources>
    <string name="app_name">SummerPractice24</string>
    <string name="send_button_text">Send</string>

    <string name="main_screen">Main</string>
    <string name="profile_screen">Profile</string>
    <string name="settings_screen">Galary</string>
    <string name="analytic_screen">Analytic</string>
    <string name="backpack_screen">Backpack</string>
    <string name="email">Email</string>
    <string name="result">Result</string>
    <string name="back">Back</string>
</resources>