<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main_screen" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile_screen" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_photo_library_24"
        android:title="@string/settings_screen" />

    <item
        android:id="@+id/analyticFragment"
        android:icon="@drawable/baseline_analytics_24"
        android:title="@string/analytic_screen" />

    <item
        android:id="@+id/backpackFragment"
        android:icon="@drawable/baseline_backpack_24"
        android:title="@string/backpack_screen" />

</menu>